--- a/config.json
+++ b/config.json
@@ -1,5 +1,9 @@
 {
-  "botPrefix": "-",
+  "dbName": "csgoItemPrice.db",
+  "botPrefix": "$",
   "commandCheck": "check",
-  "commandCsgoPrice": "csgoprice"
+  "commandCsgoPrice": "csgoprice",
+  "commandCsgoTrend": "csgotrend",
+  "commandCsgoInventory": "csgoinv",
+  "commandCoinPrice": "coinprice"
 }
