Added music-player part from the Ishycodes branch, as there was an issue while uploading hte files and the wrong directory was selected. Added necessary dependencies.

--- a/config.json
+++ b/config.json
@@ -9,5 +9,7 @@
   "commandCoinTrend": "cointrend",
   "commandCoinHistory": "coinhistory",
   "commandCompare": "compare",
-  "commandConvert": "convert"
+  "commandConvert": "convert",
+  "commandPlay": "play",
+  "commandLeave": "leave"
 }
