--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "axios": "^0.21.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "sqlite3": "^5.0.2"
+    "ffmpeg-static": "^4.3.0",
+    "opusscript": "0.0.8",
+    "sqlite3": "^5.0.2",
+    "yt-search": "^2.8.0",
+    "ytdl-core": "^4.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
