Added help command, fixed the typos in the message template on csgoprice and csgotrend elements

--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "dbName": "csgoItemPrice.db",
   "botPrefix": "$",
   "commandCheck": "check",
+  "commandHelp": "help",
   "commandCsgoPrice": "csgoprice",
   "commandCsgoTrend": "csgotrend",
   "commandCsgoInventory": "csgoinv",
